--- a/app.css
+++ b/app.css
@@ -54,6 +54,10 @@ h2 {
     background-color: #d32f2f;
 }
 
+#London{
+    background_color: #03a9f4;
+}
+
 .destination:hover h2{
     transform: rotate(0deg);
 }
