--- a/app.css
+++ b/app.css
@@ -58,6 +58,10 @@ h2 {
     background_color: #03a9f4;
 }
 
+#Edinburgh{
+    background_color: #d32f2f;
+}
+
 .destination:hover h2{
     transform: rotate(0deg);
 }
