--- a/app.css
+++ b/app.css
@@ -62,6 +62,9 @@ h2 {
     background_color: #d32f2f;
 }
 
+#Sydney{
+    background_color: #3883ec;
+}
 .destination:hover h2{
     transform: rotate(0deg);
 }
