--- a/app.css
+++ b/app.css
@@ -63,7 +63,7 @@ h2 {
 }
 
 #Sydney{
-    background_color: #3883ec;
+    background_color: #0000FF;
 }
 .destination:hover h2{
     transform: rotate(0deg);
